--- a/app.config
+++ b/app.config
@@ -1,27 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-<configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-        <section name="BW_to_WandAlpha.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-    </sectionGroup>
-</configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0"/>
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <userSettings>
-    <BW_to_WandAlpha.Properties.Settings>
-      <setting name="folder_OUT" serializeAs="String">
-        <value/>
-      </setting>
-      <setting name="folder_IN" serializeAs="String">
-        <value/>
-      </setting>
-    </BW_to_WandAlpha.Properties.Settings>
-  </userSettings>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="BW_to_WandAlpha.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <userSettings>
+        <BW_to_WandAlpha.Properties.Settings>
+            <setting name="folder_IN" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="folder_OUT" serializeAs="String">
+                <value />
+            </setting>
+        </BW_to_WandAlpha.Properties.Settings>
+    </userSettings>
 </configuration>
